[package]
name = "hal"
version = "1.2.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["examples/demo"]

[dependencies]
regex-lite = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["alloc"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
