[package]
name = "hank"
version = "1.3.0"
edition = "2021"
description = "A purely symbolic, embeddable language designed for secure orchestration and automation. It provides an air-gapped environment perfect for plugin systems and API interfaces, replacing static configuration with predictable, keyword-less logic."
license = "MIT"
repository = "https://github.com/Igazine/hank-rust"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["examples/demo"]

[dependencies]
regex-lite = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["alloc"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
